[package]
name = "paperexp"
version = "0.1.0"
authors = ["Mark Mansi <markm@cs.wisc.edu>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
libc = "0.2.48"
errno = "0.2.4"
memcache = "0.5"
regex = "1.0.5"
redis = "0.10.0"
rand = "0.6.1"
bmk_linux = "0.2.1"
futures = "0.3.12"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]
